changed style to fix the button spacing at top

--- a/src/app/carla-card/carla-card.component.css
+++ b/src/app/carla-card/carla-card.component.css
@@ -63,7 +63,8 @@ CONTENT section
    position: relative;
    text-align: center;
    display: flex;
-   top: -30px;
+   top: -35px;
+   height: 70px;
    justify-content: space-around;
  }
 
